[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/LevelEnd.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Cobra.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Levels/WatchCamera.gd" type="Script" id=5]
[ext_resource path="res://Levels/Level.gd" type="Script" id=6]
[ext_resource path="res://Assets/Pause.png" type="Texture2D" id=7]
[ext_resource path="res://Assets/Tiles/Full Tileset.tres" type="TileSet" id=8]
[ext_resource path="res://Menus/PauseMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Tiles/Plants.tres" type="TileSet" id=10]
[ext_resource path="res://Assets/Parallax/Sky.png" type="Texture2D" id=11]
[ext_resource path="res://Assets/Parallax/Parallax Front.png" type="Texture2D" id=12]
[ext_resource path="res://Assets/Parallax/Parallax Back.png" type="Texture2D" id=13]
[ext_resource path="res://Player/HealthBar.tscn" type="PackedScene" id=14]

[node name="Level 1" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="BackgroundSprite" type="Sprite2D" parent="Background"]
texture = ExtResource( 11 )
centered = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="ParallaxBack" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 0.4 )
motion_mirroring = Vector2( 450, 0 )

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxBack"]
position = Vector2( 0, 1 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 13 )
centered = false

[node name="ParallaxFront" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.7 )
motion_mirroring = Vector2( 103, 0 )

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxFront"]
position = Vector2( 0, 36 )
texture = ExtResource( 12 )
centered = false

[node name="Plants" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
cell_size = Vector2( 1, 1 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PackedInt32Array( -327318, 2, 0, 66230, 6, 0, 852395, 7, 0, 1245495, 5, 0, 1376995, 3, 0, 1508231, 6, 0, 1900799, 7, 0, 1901370, 0, 0, 2031811, 6, 0, 2359825, 4, 0, 2424896, 0, 0, 2883564, 5, 0, 2818183, 5, 0 )

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 8, 8 )
collision_layer = 4
collision_mask = 3
format = 1
tile_data = PackedInt32Array( -327562, 4, 0, -327561, 4, 0, -327560, 4, 0, -327559, 4, 0, -327558, 4, 0, -327557, 4, 0, -327556, 4, 0, -262026, 4, 0, -262025, 4, 0, -262024, 4, 0, -262023, 4, 0, -262022, 4, 0, -262021, 4, 0, -262020, 4, 0, -196490, 4, 0, -196489, 4, 0, -196488, 4, 0, -196487, 4, 0, -196486, 4, 0, -196485, 4, 0, -196484, 4, 0, -65542, 4, 0, -130954, 4, 0, -130953, 4, 0, -130952, 4, 0, -130951, 4, 0, -130950, 4, 0, -130949, 4, 0, -130948, 4, 0, -6, 4, 0, -65459, 12, 0, -65458, 13, 0, -65457, 13, 0, -65456, 13, 0, -65455, 13, 0, -65454, 13, 0, -65453, 13, 0, -65452, 14, 0, -65418, 4, 0, -65417, 4, 0, -65416, 4, 0, -65415, 4, 0, -65414, 4, 0, -65413, 4, 0, -65412, 4, 0, 65530, 4, 0, 118, 6, 0, 119, 4, 0, 120, 4, 0, 121, 4, 0, 122, 4, 0, 123, 4, 0, 124, 4, 0, 131066, 4, 0, 65578, 12, 0, 65579, 13, 0, 65580, 13, 0, 65581, 13, 0, 65582, 13, 0, 65583, 13, 0, 65584, 13, 0, 65585, 14, 0, 65654, 9, 0, 65655, 10, 0, 65656, 10, 0, 65657, 10, 0, 65658, 10, 0, 65659, 4, 0, 65660, 4, 0, 196602, 4, 0, 131144, 0, 0, 131145, 1, 0, 131146, 1, 0, 131147, 1, 0, 131148, 1, 0, 131149, 1, 0, 131150, 1, 0, 131151, 1, 0, 131152, 1, 0, 131153, 1, 0, 131154, 1, 0, 131155, 1, 0, 131156, 1, 0, 131157, 1, 0, 131158, 1, 0, 131159, 1, 0, 131160, 1, 0, 131161, 1, 0, 131162, 2, 0, 131195, -1073741820, 0, 131196, -1073741820, 0, 262138, 4, 0, 196678, 0, 0, 196679, 1, 0, 196680, 15, 0, 196681, 4, 0, 196682, 4, 0, 196683, 4, 0, 196684, 4, 0, 196685, 4, 0, 196686, 4, 0, 196687, 4, 0, 196688, 4, 0, 196689, 4, 0, 196690, 4, 0, 196691, 4, 0, 196692, 4, 0, 196693, 4, 0, 196694, 4, 0, 196695, 4, 0, 196696, 4, 0, 196697, 4, 0, 196698, 16, 0, 196699, 2, 0, 196731, -1073741820, 0, 196732, -1073741820, 0, 327674, 4, 0, 262179, 12, 0, 262180, 13, 0, 262181, 13, 0, 262182, 13, 0, 262183, 13, 0, 262184, 13, 0, 262185, 13, 0, 262186, 13, 0, 262187, 13, 0, 262188, 13, 0, 262189, 13, 0, 262190, 13, 0, 262191, 13, 0, 262192, 13, 0, 262193, 13, 0, 262194, 13, 0, 262195, 13, 0, 262196, 13, 0, 262197, 13, 0, 262198, 13, 0, 262199, 13, 0, 262200, 13, 0, 262201, 13, 0, 262202, 13, 0, 262203, 14, 0, 262213, 0, 0, 262214, 15, 0, 262215, 4, 0, 262216, 4, 0, 262217, 4, 0, 262218, 4, 0, 262219, 4, 0, 262220, 4, 0, 262221, 4, 0, 262222, 4, 0, 262223, 4, 0, 262224, 4, 0, 262225, 4, 0, 262226, 4, 0, 262227, 4, 0, 262228, 4, 0, 262229, 4, 0, 262230, 4, 0, 262231, 4, 0, 262232, 4, 0, 262233, 4, 0, 262234, 4, 0, 262235, 16, 0, 262236, 1, 0, 262237, 1, 0, 262238, 2, 0, 262259, 0, 0, 262260, 1, 0, 262261, 1, 0, 262262, 1, 0, 262263, 1, 0, 262264, 1, 0, 262265, 1, 0, 262266, 1, 0, 262267, -1073741820, 0, 262268, -1073741820, 0, 393210, 4, 0, 327715, 9, 0, 327716, 4, 0, 327717, 4, 0, 327718, 4, 0, 327719, 4, 0, 327720, 4, 0, 327721, 4, 0, 327722, 4, 0, 327723, 4, 0, 327724, 4, 0, 327725, 4, 0, 327726, 4, 0, 327727, 4, 0, 327728, 4, 0, 327729, 4, 0, 327730, 4, 0, 327731, 4, 0, 327732, 4, 0, 327749, 3, 0, 327750, 4, 0, 327751, 4, 0, 327752, 4, 0, 327753, 4, 0, 327754, 4, 0, 327755, 4, 0, 327756, 4, 0, 327757, 4, 0, 327758, 4, 0, 327759, 4, 0, 327760, 4, 0, 327761, 4, 0, 327762, 4, 0, 327763, 4, 0, 327764, 4, 0, 327765, 4, 0, 327766, 4, 0, 327767, 4, 0, 327768, 4, 0, 327769, 4, 0, 327770, 4, 0, 327771, 4, 0, 327772, 4, 0, 327773, 4, 0, 327774, 5, 0, 327792, 0, 0, 327793, 1, 0, 327794, 1, 0, 327795, 15, 0, 327796, 4, 0, 327797, 4, 0, 327798, 4, 0, 327799, 4, 0, 327800, -1073741820, 0, 327801, -1073741820, 0, 327802, -1073741820, 0, 327803, -1073741820, 0, 327804, -1073741820, 0, 458746, 4, 0, 393240, 0, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 1, 0, 393249, 1, 0, 393250, 1, 0, 393251, 1, 0, 393252, 4, 0, 393253, 4, 0, 393254, 4, 0, 393255, 4, 0, 393256, 4, 0, 393257, 4, 0, 393258, 4, 0, 393259, 4, 0, 393260, 4, 0, 393261, 4, 0, 393262, 4, 0, 393263, 4, 0, 393264, 4, 0, 393265, 4, 0, 393266, 4, 0, 393267, 4, 0, 393268, 4, 0, 393281, 0, 0, 393282, 1, 0, 393283, 1, 0, 393284, 1, 0, 393285, 15, 0, 393286, 4, 0, 393287, 4, 0, 393288, 4, 0, 393289, 4, 0, 393290, 4, 0, 393291, 4, 0, 393292, 4, 0, 393293, 4, 0, 393294, 4, 0, 393295, 4, 0, 393296, 4, 0, 393297, 4, 0, 393298, 4, 0, 393299, 4, 0, 393300, 4, 0, 393301, 4, 0, 393302, 4, 0, 393303, 4, 0, 393304, 4, 0, 393305, 4, 0, 393306, 4, 0, 393307, 4, 0, 393308, 4, 0, 393309, 4, 0, 393310, 16, 0, 393311, 1, 0, 393312, 1, 0, 393313, 1, 0, 393314, 1, 0, 393315, 1, 0, 393316, 1, 0, 393317, 1, 0, 393318, 1, 0, 393319, 1, 0, 393320, 1, 0, 393321, 1, 0, 393322, 1, 0, 393323, 1, 0, 393324, 1, 0, 393325, 1, 0, 393326, 1, 0, 393327, 1, 0, 393328, 15, 0, 393329, 4, 0, 393330, 4, 0, 393331, 4, 0, 393332, 4, 0, 393333, 4, 0, 393334, 4, 0, 393335, 4, 0, 393336, -1073741820, 0, 393337, -1073741820, 0, 393338, -1073741820, 0, 393339, -1073741820, 0, 393340, -1073741820, 0, 524282, 13, 0, 524283, 13, 0, 524284, 13, 0, 524285, 13, 0, 524286, 13, 0, 524287, 13, 0, 458752, 13, 0, 458753, 13, 0, 458754, 13, 0, 458755, 13, 0, 458756, 13, 0, 458757, 13, 0, 458758, 13, 0, 458759, 13, 0, 458760, 13, 0, 458761, 13, 0, 458762, 13, 0, 458763, 13, 0, 458764, 13, 0, 458765, 13, 0, 458766, 13, 0, 458767, 13, 0, 458768, 13, 0, 458769, 13, 0, 458770, 13, 0, 458771, 13, 0, 458772, 13, 0, 458773, 13, 0, 458774, 13, 0, 458775, 13, 0, 458776, 17, 0, 458777, 4, 0, 458778, 4, 0, 458779, 4, 0, 458780, 4, 0, 458781, 4, 0, 458782, 4, 0, 458783, 4, 0, 458784, 4, 0, 458785, 4, 0, 458786, 4, 0, 458787, 4, 0, 458788, 4, 0, 458789, 4, 0, 458790, 4, 0, 458791, 4, 0, 458792, 4, 0, 458793, 4, 0, 458794, 4, 0, 458795, 4, 0, 458796, 4, 0, 458797, 4, 0, 458798, 4, 0, 458799, 4, 0, 458800, 4, 0, 458801, 4, 0, 458802, 4, 0, 458803, 4, 0, 458804, 4, 0, 458805, 13, 0, 458806, 13, 0, 458807, 13, 0, 458808, 13, 0, 458809, 13, 0, 458810, 13, 0, 458811, 13, 0, 458812, 13, 0, 458813, 13, 0, 458814, 13, 0, 458815, 13, 0, 458816, 13, 0, 458817, 17, 0, 458818, 4, 0, 458819, 4, 0, 458820, 4, 0, 458821, 4, 0, 458822, 4, 0, 458823, 4, 0, 458824, 4, 0, 458825, 4, 0, 458826, 4, 0, 458827, 4, 0, 458828, 4, 0, 458829, 4, 0, 458830, 4, 0, 458831, 4, 0, 458832, 4, 0, 458833, 4, 0, 458834, 4, 0, 458835, 4, 0, 458836, 4, 0, 458837, 4, 0, 458838, 4, 0, 458839, 4, 0, 458840, 4, 0, 458841, 4, 0, 458842, 4, 0, 458843, 4, 0, 458844, 4, 0, 458845, 4, 0, 458846, 4, 0, 458847, 4, 0, 458848, 4, 0, 458849, 4, 0, 458850, 4, 0, 458851, 4, 0, 458852, 4, 0, 458853, 4, 0, 458854, 4, 0, 458855, 4, 0, 458856, 4, 0, 458857, 4, 0, 458858, 4, 0, 458859, 4, 0, 458860, 4, 0, 458861, 4, 0, 458862, 4, 0, 458863, 4, 0, 458864, 4, 0, 458865, 4, 0, 458866, 4, 0, 458867, 4, 0, 458868, 4, 0, 458869, 4, 0, 458870, 4, 0, 458871, 4, 0, 458872, 4, 0, 458873, 4, 0, 458874, 4, 0, 458875, 4, 0, 458876, 4, 0 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Cobra1" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 452, 49 )

[node name="Cobra2" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 648, 10 )

[node name="Cobra3" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 784, 41 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 53 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 8, 0 )
current = true
limit_left = -40
limit_right = 960
limit_bottom = 64
editor_draw_limits = true
script = ExtResource( 4 )

[node name="TestCamera" type="Camera2D" parent="."]
position = Vector2( 41, 32 )
script = ExtResource( 5 )

[node name="PauseLayer" type="CanvasLayer" parent="."]

[node name="Pause" type="Area2D" parent="PauseLayer"]
position = Vector2( 6, 6 )

[node name="Sprite2D" type="Sprite2D" parent="PauseLayer/Pause"]
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PauseLayer/Pause"]
polygon = PackedVector2Array( -3, -3, 3, -3, 3, 3, -3, 3 )

[node name="PauseMenu" parent="PauseLayer" instance=ExtResource( 9 )]
visible = false

[node name="HealthBar" parent="PauseLayer" instance=ExtResource( 14 )]
position = Vector2( 53, 5 )

[node name="LevelEnd" parent="." instance=ExtResource( 2 )]
position = Vector2( 973, 14 )
